creo los call to action y dos secciones + estilos

--- a/index.html
+++ b/index.html
@@ -47,6 +47,78 @@
     </nav>
     <!-- termina nav -->
 
+    <main>
+        <!-- empieza call 1 -->
+        <div class="call1">
+            <h1>Consigue un sitio web nuevo y reluciente en pocos días</h1>
+            <a href="pages/servicios.html">Hagamoslo</a>
+        </div>
+        <!-- termina call 1 -->
+
+        <!-- empieza primera seccion -->
+        <div class="primera">
+            <section class="sec1">
+                <i class="fa-solid fa-wand-magic-sparkles" style="color: #2474ff"></i>
+                <h2>Diseño y creación sin costo alguno</h2>
+                <p>Sorprende a tus compañeros emprendedores. Presume que has contratado a un experto. A diferencia de otras plataformas de creación web, tú no tienes que preocuparte por el diseño en absoluto</p>
+            </section>
+            <section class="sec1">
+                <i class="fa-solid fa-chart-line" style="color: #2474ff"></i>
+                <h2>Soporte gratuito</h2>
+                <p>¿Listo para ajustes? Solo envía un mensaje y nosotros nos encargaremos de todo</p>
+            </section>
+            <section class="sec1">
+                <i class="fa-solid fa-user icono3" style="color: #2474ff"></i>
+                <h2>Diseñado para captar clientes potenciales y generar negocio</h2>
+                <p>estratégicamente orientado a atraer la atención de personas que podrían estar interesadas en los productos o servicios ofrecidos</p>
+            </section>
+        </div>
+        <!-- termina primera seccion -->
+
+        <!-- empieza call 2 -->
+        <div class="call1">
+            <h1>Estas a nada de obtener tu sitio web 2</h1>
+            <a href="">¡Lo quiero ya!</a>
+        </div>
+        <!-- termina call 2 -->
+
+        <!-- empieza segunda seccion -->
+        <div class="tercera">
+            <section class="sec1 sec3 escudo">
+                <i class="fa-solid fa-shield-halved" style="color: #2474ff"></i>
+                <h2>Todo incluido</h2>
+                <p>Diseño, desarrollo, hosting, dominio, gestión.</p>
+            </section>
+            <section class="sec1 sec3 billete">
+                <h2>Precio accesible</h2>
+                <i class="fa-solid fa-money-bill" style="color: #2474ff"></i>
+            </section>
+            <section class="sec1 sec3 tag">
+                <i class="fa-solid fa-tag" style="color: #2474ff"></i>
+                <h2>Nunca pagarás tarifas de inscripción</h2>
+                <p>A todos nos desagrada encontrarnos con tarifas inesperadas o incrementos en los precios</p>
+            </section>
+            <section class="sec1 sec3 user">
+                <i class="fa-solid fa-users-viewfinder" style="color: #2474ff"></i>
+                <h2>Soporte personalizado</h2>
+                <p>Soporte las 24hs del dia</p>
+            </section>
+            <section class="sec1 sec3 cohete">
+                <i class="fa-solid fa-rocket" style="color: #2474ff"></i>
+                <h2>Deja de preocuparte por hacerlo tú mismo</h2>
+                <p>Tu sitio web creado por profesionales</p>
+            </section>
+        </div>
+        <!-- termina segunda seccion -->
+        <!-- empieza call 3 -->
+        <div class="call1">
+            <h1>¿Que estas esperando?</h1>
+            <a href="">Comencemos</a>
+        </div>
+        <!-- termina call 3 -->
+    </main>
+
+
 
 
     <!-- termina bootstrap -->
