creo footer + estilos y termino index

--- a/index.html
+++ b/index.html
@@ -20,26 +20,26 @@
     <!-- empieza nav -->
     <nav class="navbar navbar-expand-sm navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand img" href="#"><img src="multimedia/Captura de pantalla 2024-02-01 184547.png" alt="" /><h4>WebMasters</h4></a>
+            <a class="navbar-brand img" href="index.html"><img src="multimedia/Captura de pantalla 2024-02-01 184547.png" alt="" /><h4>WebMasters</h4></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="justify-content-end collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Servicios</a>
+                        <a class="nav-link" href="pages/servicios.html">Servicios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Preguntas</a>
+                        <a class="nav-link" href="pages/preguntas.html">Preguntas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Acerca De</a>
+                        <a class="nav-link" href="pages/acercaDe.html">Acerca De</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="pages/contacto.html">Contacto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link comencemos" href="#">Comencemos</a>
+                        <a class="nav-link comencemos" href="pages/contacto.html">Comencemos</a>
                     </li>
                 </ul>
             </div>
@@ -51,7 +51,7 @@
         <!-- empieza call 1 -->
         <div class="call1">
             <h1>Consigue un sitio web nuevo y reluciente en pocos días</h1>
-            <a href="pages/servicios.html">Hagamoslo</a>
+            <a href="pages/contacto.html">Hagamoslo</a>
         </div>
         <!-- termina call 1 -->
 
@@ -78,7 +78,7 @@
         <!-- empieza call 2 -->
         <div class="call1">
             <h1>Estas a nada de obtener tu sitio web 2</h1>
-            <a href="">¡Lo quiero ya!</a>
+            <a href="pages/contacto.html">¡Lo quiero ya!</a>
         </div>
         <!-- termina call 2 -->
 
@@ -113,10 +113,24 @@
         <!-- empieza call 3 -->
         <div class="call1">
             <h1>¿Que estas esperando?</h1>
-            <a href="">Comencemos</a>
+            <a href="pages/contacto.html">Comencemos</a>
         </div>
         <!-- termina call 3 -->
     </main>
+    <!-- empieza footer -->
+    <footer>
+        <div class="logofooter">
+            <img src="multimedia/Captura de pantalla 2024-02-01 184547.png" />
+            <h4>WebMasters</h4>
+        </div>
+        <div class="redes">
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-square-facebook"></i>
+            <i class="fa-brands fa-square-x-twitter"></i>
+        </div>
+        <p>todos los derechos son reservados por copyright</p>
+    </footer>
+    <!-- termina footer -->
 
 
 
