--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -43,12 +43,61 @@
             </div>
         </div>
     </nav>
-    <!-- termina nav -->    
+    <!-- termina nav -->  
 
+    <!-- empieza seccion -->
+    <main>
+        <p class="textoservicios">
+            En WebMasters, nos dedicamos a potenciar la presencia en línea de marcas y negocios mediante la creación de sitios web a medida. Nuestro enfoque se centra en capturar la esencia y el valor único de cada marca para ofrecer una experiencia digital que resuene con su audiencia..</p>
 
-
-
-
+        <div class="tercera tercera-serv">
+            <section class="sec1 sec3 varita-serv">
+                <i class="fa-solid fa-wand-magic-sparkles" style="color: #2474ff;"></i>
+                <h2>No te preocupes por hacerlo tú mismo</h2>
+                <p>Un profesional se encarga del diseño de su sitio web. Otras compañías te hacen ocuparte de ello tú mismo</p>
+            </section>
+            <section class="sec1 sec3 lapicera-serv">
+                <i class="fa-solid fa-pen-nib" style="color: #2474ff;"></i>
+                <h2>Diseño personalizado</h2>
+                <p>Tu marca es una prioridad para nosotros. El diseño de tu sitio web está cuidadosamente alineado con la imagen de tu marca</p>
+            </section>
+            <section class="sec1 sec3 tag-serv">
+                <i class="fa-solid fa-tag" style="color: #2474ff;"></i>
+                <h2>SEO - SÍ</h2> 
+                <p>Cada sitio web creado por WebMasters se ha optimizado para motores de búsqueda, lo que ayuda a los clientes a encontrarlo fácilmente en los lugares donde buscan</p>
+            </section>
+            <section class="sec1 sec3 comentario-serv">
+                <i class="fa-regular fa-comment-dots" style="color: #2474ff;"></i>
+                <h2>Dominio gratuito</h2>
+                <p>WebMasters registrará y pagará por su dominio. O puede traer su dominio existente y lo conectaremos a su sitio por usted. </p>
+            </section>
+            <section class="sec1 sec3 phone">
+                <i class="fa-solid fa-phone-volume" style="color: #2474ff;"></i>
+                <h2>Ediciones gratuitas del sitio web</h2>
+                <p>Eres libre de modificar tu opinión. Simplemente envía las actualizaciones y nosotros las implementaremos sin costo adicional </p>
+            </section>
+            <section class="sec1 sec3 user-shield">
+                <i class="fa-solid fa-user-shield" style="color: #2474ff;"></i>
+                <h2>Asistencia 24/7</h2>
+                <p>Estamos aquí para ayudarte en todo lo que necesites</p>
+            </section>
+        </div>
+    </main>
+    <!-- termina seccion -->
+    <!-- empieza footer -->
+    <footer>
+        <div class="logofooter">
+            <img src="../multimedia/Captura de pantalla 2024-02-01 184547.png" />
+            <h4>WebMasters</h4>
+        </div>
+        <div class="redes">
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-square-facebook"></i>
+            <i class="fa-brands fa-square-x-twitter"></i>
+        </div>
+        <p>todos los derechos son reservados por copyright</p>
+    </footer>    
+    <!-- termina footer -->
 
     <!-- termina bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
