creo texto de acerca de + estilos

--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -44,21 +44,17 @@
         </div>
     </nav>
     <!-- termina nav -->
+    <main>
+        <h2>¡Bienvenido a WebMasters!</h2>
+        <p class="textoaceraDe"> Somos una empresa dedicada al desarrollo web, especializada en la creación de sitios web personalizados para todo tipo de negocios. </p>
+        <p class="textoaceraDe"> En WebMasters, entendemos que tener una presencia en línea efectiva es fundamental para el éxito en el mundo moderno de los negocios. </p> 
+        <p class="textoaceraDe">Nos comprometemos a proporcionar a nuestros clientes una experiencia sin problemas desde el inicio hasta la finalización del proyecto.</p>
+        <p class="textoaceraDe">Nos esforzamos por comprender profundamente los objetivos y valores de cada negocio para asegurarnos de que su presencia en línea refleje fielmente su identidad y mensaje</p>   
+        <p class="textoaceraDe">Si estás buscando llevar la presencia en línea de tu negocio al siguiente nivel, no busques más que WebMasters. ¡Contáctanos hoy mismo y descubre cómo podemos ayudarte a alcanzar tus objetivos en línea
+        </p>
+    </main>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <!-- empieza footer -->
+    <!-- empieza footer -->
         <footer>
             <div class="logofooter">
                 <img src="../multimedia/Captura de pantalla 2024-02-01 184547.png" />
