creo formulario contacto + estilos

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -44,8 +44,33 @@
         </div>
     </nav>
     <!-- termina nav -->
-
-
+    <!-- empieza formulario -->
+    <form>
+        <div class="row">
+            <div class="col">
+                <label for="email" class="form-label">Email</label>
+                <input type="text" class="form-control" placeholder="Ingrese email" name="email">
+            </div>
+            <div class="col">
+                <label for="nombre" class="form-label">Nombre</label>
+                <input type="text" class="form-control" placeholder="Ingrese nombre" name="nombre">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <label for="telefono" class="form-label">Numero de telefono</label>
+                <input type="number" class="form-control" placeholder="Ingrese numero" name="telefono">
+            </div>
+            <div class="col">
+                <label for="negocio" class="form-label negocio">¿De que trata su negocio?</label>
+                <input type="text" class="form-control" placeholder="Describa negocio" name="negocio">
+            </div>
+        </div>
+        <label for="comment" class="form-label">¿En que podemos ayudar?</label>
+        <textarea class="form-control" rows="5" id="comment" name="text"></textarea>
+        <button type="submit" class="btn btn-primary boton">Enviar</button>
+    </form>
+    <!-- termina formulario -->
 
 
 
