--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,6 +15,7 @@
     <title>WebMasters</title>
 </head>
 <body>
+    <header>
     <!-- empieza nav -->
     <nav class="navbar navbar-expand-sm navbar-dark">
         <div class="container-fluid">
@@ -44,6 +45,12 @@
         </div>
     </nav>
     <!-- termina nav -->
+    </header>
+    <main>
+        <p class="contacto">En WebMasters estamos emocionados de ayudarte a llevar tu negocio al mundo digital creando un sitio web único y efectivo que represente la esencia de tu marca. </p>
+        <p class="contacto">Para asegurarnos de que comprendemos completamente tus necesidades y expectativas, nos gustaría que nos brindaras algunos detalles sobre tu negocio y tus ideas para el sitio web que deseas.</p>
+        <p class="contacto">Una vez que hayamos revisado esta información, nos gustaría programar una llamada contigo para discutir más a fondo tus requisitos y asegurarnos de que estemos en la misma página en términos de visión y expectativas para el proyecto.</p>
+        <p class="contacto">¡Esperamos con ansias trabajar contigo para crear un sitio web excepcional que impulse el éxito de tu negocio!</p>
     <!-- empieza formulario -->
     <form>
         <div class="row">
@@ -71,9 +78,8 @@
         <button type="submit" class="btn btn-primary boton">Enviar</button>
     </form>
     <!-- termina formulario -->
-
-
-
+    
+    </main>
     <!-- empieza footer -->
     <footer>
         <div class="logofooter">
@@ -97,11 +103,5 @@
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
     <!--  -->
-
-
-
-
-
-
 </body>
 </html>
