termino de agregar detalles

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <title>WebMasters</title>
     </head>
 <body>
+    <header>
     <!-- empieza nav -->
     <nav class="navbar navbar-expand-sm navbar-dark">
         <div class="container-fluid">
@@ -46,7 +47,7 @@
         </div>
     </nav>
     <!-- termina nav -->
-
+    </header>
     <main>
         <!-- empieza call 1 -->
         <div class="call1">
@@ -131,9 +132,6 @@
         <p>todos los derechos son reservados por copyright</p>
     </footer>
     <!-- termina footer -->
-
-
-
 
     <!-- termina bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
