--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -15,10 +15,11 @@
     <title>WebMasters</title>
 </head>
 <body>
+    <header>
     <!-- empieza nav -->
     <nav class="navbar navbar-expand-sm navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand img" href="index.html"><img src="../multimedia/Captura de pantalla 2024-02-01 184547.png" alt="" /><h4>WebMasters</h4></a>
+            <a class="navbar-brand img" href="../index.html"><img src="../multimedia/Captura de pantalla 2024-02-01 184547.png" alt="" /><h4>WebMasters</h4></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -44,6 +45,7 @@
         </div>
     </nav>
     <!-- termina nav -->
+    </header>
     <main>
         <h2>¡Bienvenido a WebMasters!</h2>
         <p class="textoaceraDe"> Somos una empresa dedicada al desarrollo web, especializada en la creación de sitios web personalizados para todo tipo de negocios. </p>
