--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -15,6 +15,7 @@
     <title>WebMasters</title>
 </head>
 <body>
+    <header>
     <!-- empieza nav -->
     <nav class="navbar navbar-expand-sm navbar-dark">
         <div class="container-fluid">
@@ -44,7 +45,7 @@
         </div>
     </nav>
     <!-- termina nav -->  
-
+    </header>
     <!-- empieza seccion -->
     <main>
         <p class="textoservicios">
