--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <!-- empieza call 2 -->
         <div class="call1">
-            <h1>Estas a nada de obtener tu sitio web 2</h1>
+            <h1>Estas a nada de obtener tu sitio web</h1>
             <a href="pages/contacto.html">¡Lo quiero ya!</a>
         </div>
         <!-- termina call 2 -->
