--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -49,7 +49,7 @@
     <!-- empieza seccion -->
     <main>
         <p class="textoservicios">
-            En WebMasters, nos dedicamos a potenciar la presencia en línea de marcas y negocios mediante la creación de sitios web a medida. Nuestro enfoque se centra en capturar la esencia y el valor único de cada marca para ofrecer una experiencia digital que resuene con su audiencia..</p>
+            En WebMasters, nos dedicamos a potenciar la presencia en línea de marcas y negocios mediante la creación de sitios web a medida. Nuestro enfoque se centra en capturar la esencia y el valor único de cada marca para ofrecer una experiencia digital que resuene con su audiencia.</p>
 
         <div class="tercera tercera-serv">
             <section class="sec1 sec3 varita-serv">
