--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -57,7 +57,7 @@
     </main>
 
     <!-- empieza footer -->
-    <footer>
+    <footer class="footerAcerca">
         <div class="logofooter">
             <img src="../multimedia/Captura de pantalla 2024-02-01 184547.png" />
             <h4>WebMasters</h4>
