--- a/pages/preguntas.html
+++ b/pages/preguntas.html
@@ -63,7 +63,7 @@
     <!-- termina formulario -->
 
     <!-- empieza footer -->
-    <footer>
+    <footer class="footerPreguntas">
         <div class="logofooter">
             <img src="../multimedia/Captura de pantalla 2024-02-01 184547.png" />
             <h4>WebMasters</h4>
