agrego animaciones a los html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="shortcut icon" href="multimedia/Captura de pantalla 2024-02-01 184547.png" type="image/x-icon" />
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
             integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -50,7 +51,7 @@
     </header>
     <main>
         <!-- empieza call 1 -->
-        <div class="call1">
+        <div class="call1" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0">
             <h1>Consigue un sitio web nuevo y reluciente en pocos días</h1>
             <a href="pages/contacto.html">Hagamoslo</a>
         </div>
@@ -58,17 +59,17 @@
 
         <!-- empieza primera seccion -->
         <div class="primera">
-            <section class="sec1">
+            <section class="sec1" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <i class="fa-solid fa-wand-magic-sparkles" style="color: #2474ff"></i>
                 <h2>Diseño y creación sin costo alguno</h2>
                 <p>Sorprende a tus compañeros emprendedores. Presume que has contratado a un experto. A diferencia de otras plataformas de creación web, tú no tienes que preocuparte por el diseño en absoluto</p>
             </section>
-            <section class="sec1">
+            <section class="sec1" data-aos="fade-down" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <i class="fa-solid fa-chart-line" style="color: #2474ff"></i>
                 <h2>Soporte gratuito</h2>
                 <p>¿Listo para ajustes? Solo envía un mensaje y nosotros nos encargaremos de todo</p>
             </section>
-            <section class="sec1">
+            <section class="sec1" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <i class="fa-solid fa-user icono3" style="color: #2474ff"></i>
                 <h2>Diseñado para captar clientes potenciales y generar negocio</h2>
                 <p>estratégicamente orientado a atraer la atención de personas que podrían estar interesadas en los productos o servicios ofrecidos</p>
@@ -77,7 +78,7 @@
         <!-- termina primera seccion -->
 
         <!-- empieza call 2 -->
-        <div class="call1">
+        <div class="call1" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="500" data-aos-offset="0">
             <h1>Estas a nada de obtener tu sitio web</h1>
             <a href="pages/contacto.html">¡Lo quiero ya!</a>
         </div>
@@ -85,26 +86,26 @@
 
         <!-- empieza segunda seccion -->
         <div class="tercera">
-            <section class="sec1 sec3 escudo">
+            <section class="sec1 sec3 escudo" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <i class="fa-solid fa-shield-halved" style="color: #2474ff"></i>
                 <h2>Todo incluido</h2>
                 <p>Diseño, desarrollo, hosting, dominio, gestión.</p>
             </section>
-            <section class="sec1 sec3 billete">
+            <section class="sec1 sec3 billete" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <h2>Precio accesible</h2>
                 <i class="fa-solid fa-money-bill" style="color: #2474ff"></i>
             </section>
-            <section class="sec1 sec3 tag">
+            <section class="sec1 sec3 tag" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <i class="fa-solid fa-tag" style="color: #2474ff"></i>
                 <h2>Nunca pagarás tarifas de inscripción</h2>
                 <p>A todos nos desagrada encontrarnos con tarifas inesperadas o incrementos en los precios</p>
             </section>
-            <section class="sec1 sec3 user">
+            <section class="sec1 sec3 user" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <i class="fa-solid fa-users-viewfinder" style="color: #2474ff"></i>
                 <h2>Soporte personalizado</h2>
                 <p>Soporte las 24hs del dia</p>
             </section>
-            <section class="sec1 sec3 cohete">
+            <section class="sec1 sec3 cohete" data-aos="fade-up" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <i class="fa-solid fa-rocket" style="color: #2474ff"></i>
                 <h2>Deja de preocuparte por hacerlo tú mismo</h2>
                 <p>Tu sitio web creado por profesionales</p>
@@ -112,7 +113,7 @@
         </div>
         <!-- termina segunda seccion -->
         <!-- empieza call 3 -->
-        <div class="call1">
+        <div class="call1" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="500" data-aos-offset="0">
             <h1>¿Que estas esperando?</h1>
             <a href="pages/contacto.html">Comencemos</a>
         </div>
@@ -141,5 +142,9 @@
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
     <!--  -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
