--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="../multimedia/Captura de pantalla 2024-02-01 184547.png" type="image/x-icon" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -47,12 +48,12 @@
     <!-- termina nav -->
     </header>
     <main>
-        <h2>¡Bienvenido a WebMasters!</h2>
-        <p class="textoaceraDe"> Somos una empresa dedicada al desarrollo web, especializada en la creación de sitios web personalizados para todo tipo de negocios. </p>
-        <p class="textoaceraDe"> En WebMasters, entendemos que tener una presencia en línea efectiva es fundamental para el éxito en el mundo moderno de los negocios. </p> 
-        <p class="textoaceraDe">Nos comprometemos a proporcionar a nuestros clientes una experiencia sin problemas desde el inicio hasta la finalización del proyecto.</p>
-        <p class="textoaceraDe">Nos esforzamos por comprender profundamente los objetivos y valores de cada negocio para asegurarnos de que su presencia en línea refleje fielmente su identidad y mensaje</p>   
-        <p class="textoaceraDe">Si estás buscando llevar la presencia en línea de tu negocio al siguiente nivel, no busques más que WebMasters. ¡Contáctanos hoy mismo y descubre cómo podemos ayudarte a alcanzar tus objetivos en línea
+        <h2 data-aos="fade-down-right">¡Bienvenido a WebMasters!</h2>
+        <p class="textoaceraDe" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0"> Somos una empresa dedicada al desarrollo web, especializada en la creación de sitios web personalizados para todo tipo de negocios. </p>
+        <p class="textoaceraDe" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="450" data-aos-offset="0"> En WebMasters, entendemos que tener una presencia en línea efectiva es fundamental para el éxito en el mundo moderno de los negocios. </p> 
+        <p class="textoaceraDe" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="550" data-aos-offset="0">Nos comprometemos a proporcionar a nuestros clientes una experiencia sin problemas desde el inicio hasta la finalización del proyecto.</p>
+        <p class="textoaceraDe" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="600" data-aos-offset="0">Nos esforzamos por comprender profundamente los objetivos y valores de cada negocio para asegurarnos de que su presencia en línea refleje fielmente su identidad y mensaje</p>   
+        <p class="textoaceraDe" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="700" data-aos-offset="0">Si estás buscando llevar la presencia en línea de tu negocio al siguiente nivel, no busques más que WebMasters. ¡Contáctanos hoy mismo y descubre cómo podemos ayudarte a alcanzar tus objetivos en línea
         </p>
     </main>
 
@@ -79,5 +80,9 @@
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
     <!--  -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
