--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="../multimedia/Captura de pantalla 2024-02-01 184547.png" type="image/x-icon" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -47,12 +48,12 @@
     <!-- termina nav -->
     </header>
     <main>
-        <p class="contacto">En WebMasters estamos emocionados de ayudarte a llevar tu negocio al mundo digital creando un sitio web único y efectivo que represente la esencia de tu marca. </p>
-        <p class="contacto">Para asegurarnos de que comprendemos completamente tus necesidades y expectativas, nos gustaría que nos brindaras algunos detalles sobre tu negocio y tus ideas para el sitio web que deseas.</p>
-        <p class="contacto">Una vez que hayamos revisado esta información, nos gustaría programar una llamada contigo para discutir más a fondo tus requisitos y asegurarnos de que estemos en la misma página en términos de visión y expectativas para el proyecto.</p>
-        <p class="contacto">¡Esperamos con ansias trabajar contigo para crear un sitio web excepcional que impulse el éxito de tu negocio!</p>
+        <p class="contacto" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0">En WebMasters estamos emocionados de ayudarte a llevar tu negocio al mundo digital creando un sitio web único y efectivo que represente la esencia de tu marca. </p>
+        <p class="contacto" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="400" data-aos-offset="0">Para asegurarnos de que comprendemos completamente tus necesidades y expectativas, nos gustaría que nos brindaras algunos detalles sobre tu negocio y tus ideas para el sitio web que deseas.</p>
+        <p class="contacto" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="400" data-aos-offset="0">Una vez que hayamos revisado esta información, nos gustaría programar una llamada contigo para discutir más a fondo tus requisitos y asegurarnos de que estemos en la misma página en términos de visión y expectativas para el proyecto.</p>
+        <p class="contacto" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="400" data-aos-offset="0">¡Esperamos con ansias trabajar contigo para crear un sitio web excepcional que impulse el éxito de tu negocio!</p>
     <!-- empieza formulario -->
-    <form>
+    <form data-aos="fade-up" data-aos-offset="300" data-aos-easing="ease-in-sine">
         <div class="row">
             <div class="col">
                 <label for="email" class="form-label">Email</label>
@@ -103,5 +104,9 @@
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
     <!--  -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
