--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="../multimedia/Captura de pantalla 2024-02-01 184547.png" type="image/x-icon" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -48,36 +49,36 @@
     </header>
     <!-- empieza seccion -->
     <main>
-        <p class="textoservicios">
+        <p class="textoservicios" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0">
             En WebMasters, nos dedicamos a potenciar la presencia en línea de marcas y negocios mediante la creación de sitios web a medida. Nuestro enfoque se centra en capturar la esencia y el valor único de cada marca para ofrecer una experiencia digital que resuene con su audiencia.</p>
 
-        <div class="tercera tercera-serv">
+        <div class="tercera tercera-serv" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
             <section class="sec1 sec3 varita-serv">
                 <i class="fa-solid fa-wand-magic-sparkles" style="color: #2474ff;"></i>
                 <h2>No te preocupes por hacerlo tú mismo</h2>
                 <p>Un profesional se encarga del diseño de su sitio web. Otras compañías te hacen ocuparte de ello tú mismo</p>
             </section>
-            <section class="sec1 sec3 lapicera-serv">
+            <section class="sec1 sec3 lapicera-serv" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <i class="fa-solid fa-pen-nib" style="color: #2474ff;"></i>
                 <h2>Diseño personalizado</h2>
                 <p>Tu marca es una prioridad para nosotros. El diseño de tu sitio web está cuidadosamente alineado con la imagen de tu marca</p>
             </section>
-            <section class="sec1 sec3 tag-serv">
+            <section class="sec1 sec3 tag-serv" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <i class="fa-solid fa-tag" style="color: #2474ff;"></i>
                 <h2>SEO - SÍ</h2> 
                 <p>Cada sitio web creado por WebMasters se ha optimizado para motores de búsqueda, lo que ayuda a los clientes a encontrarlo fácilmente en los lugares donde buscan</p>
             </section>
-            <section class="sec1 sec3 comentario-serv">
+            <section class="sec1 sec3 comentario-serv" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <i class="fa-regular fa-comment-dots" style="color: #2474ff;"></i>
                 <h2>Dominio gratuito</h2>
                 <p>WebMasters registrará y pagará por su dominio. O puede traer su dominio existente y lo conectaremos a su sitio por usted. </p>
             </section>
-            <section class="sec1 sec3 phone">
+            <section class="sec1 sec3 phone" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <i class="fa-solid fa-phone-volume" style="color: #2474ff;"></i>
                 <h2>Ediciones gratuitas del sitio web</h2>
                 <p>Eres libre de modificar tu opinión. Simplemente envía las actualizaciones y nosotros las implementaremos sin costo adicional </p>
             </section>
-            <section class="sec1 sec3 user-shield">
+            <section class="sec1 sec3 user-shield" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <i class="fa-solid fa-user-shield" style="color: #2474ff;"></i>
                 <h2>Asistencia 24/7</h2>
                 <p>Estamos aquí para ayudarte en todo lo que necesites</p>
@@ -108,5 +109,9 @@
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
     <!--  -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
