--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -1,29 +1,30 @@
-<!DOCTYPE html>
+DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="../multimedia/Captura de pantalla 2024-02-01 184547.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="../multimedia/original.png" type="image/x-icon" />
     <!-- inicia animaciones -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="../estilos.css" rel="stylesheet" />
+    <link href="../css/estilos.css" rel="stylesheet" />
     <!-- inica bootsrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <!--  -->
-    <title>WebMasters</title>
+    <title>WebMasters | Acerca De </title>
+    <meta name="description" content="Descubre de que se trata WebMasters">
 </head>
 <body>
     <header>
     <!-- empieza nav -->
     <nav class="navbar navbar-expand-sm navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand img" href="../index.html"><img src="../multimedia/Captura de pantalla 2024-02-01 184547.png" alt="" /><h4>WebMasters</h4></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+            <a class="navbar-brand img" href="../index.html"><img alt="imagen" src="../multimedia/original.png"/><h4>WebMasters</h4></a>
+            <button id="buttonTitle" title="Navegador" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="justify-content-end collapse navbar-collapse" id="collapsibleNavbar">
@@ -62,13 +63,13 @@
     <!-- empieza footer -->
     <footer class="footerAcerca">
         <div class="logofooter">
-            <img src="../multimedia/Captura de pantalla 2024-02-01 184547.png" />
+            <img alt="imagen" src="../multimedia/original.png" />
             <h4>WebMasters</h4>
         </div>
         <div class="redes">
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-square-facebook"></i>
-            <i class="fa-brands fa-square-x-twitter"></i>
+            <i alt="instagram" class="fa-brands fa-instagram"></i>
+            <i alt="facebook" class="fa-brands fa-square-facebook"></i>
+            <i alt="twitter" class="fa-brands fa-square-x-twitter"></i>
         </div>
         <p>todos los derechos son reservados por copyright</p>
     </footer>
