--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -3,27 +3,28 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="../multimedia/Captura de pantalla 2024-02-01 184547.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="../multimedia/original.png" type="image/x-icon" />
     <!-- empieza animaciones -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="../estilos.css" rel="stylesheet" />
+    <link href="../css/estilos.css" rel="stylesheet" />
     <!-- inica bootsrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <!--  -->
-    <title>WebMasters</title>
+    <title>WebMasters | Servicios </title>
+    <meta name="description" content="Entre y vea los servicios que ofrecemos">
 </head>
 <body>
     <header>
     <!-- empieza nav -->
     <nav class="navbar navbar-expand-sm navbar-dark">
         <div class="container-fluid">
-            <a class="navbar-brand img" href="../index.html"><img src="../multimedia/Captura de pantalla 2024-02-01 184547.png" alt="" /><h4>WebMasters</h4></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+            <a class="navbar-brand img" href="../index.html"><img alt="imagen" src="../multimedia/original.png"/><h4>WebMasters</h4></a>
+            <button id="buttonTitle" title="Navegador" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="justify-content-end collapse navbar-collapse" id="collapsibleNavbar">
@@ -56,32 +57,32 @@
 
         <div class="tercera tercera-serv" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
             <section class="sec1 sec3 varita-serv">
-                <i class="fa-solid fa-wand-magic-sparkles" style="color: #2474ff;"></i>
+                <i alt="varita" class="fa-solid fa-wand-magic-sparkles" style="color: #2474ff;"></i>
                 <h2>No te preocupes por hacerlo tú mismo</h2>
                 <p>Un profesional se encarga del diseño de su sitio web. Otras compañías te hacen ocuparte de ello tú mismo</p>
             </section>
             <section class="sec1 sec3 lapicera-serv" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
-                <i class="fa-solid fa-pen-nib" style="color: #2474ff;"></i>
+                <i alt="lapicera" class="fa-solid fa-pen-nib" style="color: #2474ff;"></i>
                 <h2>Diseño personalizado</h2>
                 <p>Tu marca es una prioridad para nosotros. El diseño de tu sitio web está cuidadosamente alineado con la imagen de tu marca</p>
             </section>
             <section class="sec1 sec3 tag-serv" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
-                <i class="fa-solid fa-tag" style="color: #2474ff;"></i>
+                <i alt="tag" class="fa-solid fa-tag" style="color: #2474ff;"></i>
                 <h2>SEO - SÍ</h2> 
                 <p>Cada sitio web creado por WebMasters se ha optimizado para motores de búsqueda, lo que ayuda a los clientes a encontrarlo fácilmente en los lugares donde buscan</p>
             </section>
             <section class="sec1 sec3 comentario-serv" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
-                <i class="fa-regular fa-comment-dots" style="color: #2474ff;"></i>
+                <i alt="comentario" class="fa-regular fa-comment-dots" style="color: #2474ff;"></i>
                 <h2>Dominio gratuito</h2>
                 <p>WebMasters registrará y pagará por su dominio. O puede traer su dominio existente y lo conectaremos a su sitio por usted. </p>
             </section>
             <section class="sec1 sec3 phone" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
-                <i class="fa-solid fa-phone-volume" style="color: #2474ff;"></i>
+                <i alt="telefono" class="fa-solid fa-phone-volume" style="color: #2474ff;"></i>
                 <h2>Ediciones gratuitas del sitio web</h2>
                 <p>Eres libre de modificar tu opinión. Simplemente envía las actualizaciones y nosotros las implementaremos sin costo adicional </p>
             </section>
             <section class="sec1 sec3 user-shield" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
-                <i class="fa-solid fa-user-shield" style="color: #2474ff;"></i>
+                <i alt="escudo" class="fa-solid fa-user-shield" style="color: #2474ff;"></i>
                 <h2>Asistencia 24/7</h2>
                 <p>Estamos aquí para ayudarte en todo lo que necesites</p>
             </section>
@@ -91,13 +92,13 @@
     <!-- empieza footer -->
     <footer>
         <div class="logofooter">
-            <img src="../multimedia/Captura de pantalla 2024-02-01 184547.png" />
+            <img alt="imagen" src="../multimedia/original.png" />
             <h4>WebMasters</h4>
         </div>
         <div class="redes">
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-square-facebook"></i>
-            <i class="fa-brands fa-square-x-twitter"></i>
+            <i alt="instagram" class="fa-brands fa-instagram"></i>
+            <i alt="facebook" class="fa-brands fa-square-facebook"></i>
+            <i alt="twitter" class="fa-brands fa-square-x-twitter"></i>
         </div>
         <p>todos los derechos son reservados por copyright</p>
     </footer>    
