--- a/index.html
+++ b/index.html
@@ -1,61 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
-    <!DOCTYPE html>
-    <html lang="es">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="shortcut icon" href="multimedia/original.png" type="image/x-icon" />
-        <!-- inicia animaciones -->
-        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-        <!--  -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-            integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-            crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link href="css/estilos.css" rel="stylesheet" />
-        <!-- inica bootsrap -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+<html lang="es">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="multimedia/original.png" type="image/x-icon" />
+    <!-- inicia animaciones -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <!--  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="css/estilos.css" rel="stylesheet" />
+    <!-- inica bootsrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-        <!--  -->
-        <title>WebMasters | Tu pagina web al alcance de tus manos</title>
-        <meta name="description=" content="En WebMasters los clientes podran contratar a profesionales de diseño y desarrollo web para crear páginas web a medida para sus necesidades específicas">
-        <meta name="keywords" content="CREACION, CREAR, PAGINAS WEB, DESARROLLO WEB, DISEÑO">
-    </head>
+    <!--  -->
+    <title>WebMasters | Tu pagina web al alcance de tus manos</title>
+    <meta name="description="
+        content="En WebMasters los clientes podran contratar a profesionales de diseño y desarrollo web para crear páginas web a medida para sus necesidades específicas" />
+    <meta name="keywords" content="CREACION, CREAR, PAGINAS WEB, DESARROLLO WEB, DISEÑO" />
+</head>
+
 <body>
     <header>
-    <!-- empieza nav -->
-    <nav class="navbar navbar-expand-sm navbar-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand img" href="index.html"><img alt="imagen" src="multimedia/original.png"/><h4>WebMasters</h4></a>
-            <button id="buttonTitle" title="Navegador" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="justify-content-end collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="pages/servicios.html">Servicios</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="pages/preguntas.html">Preguntas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="pages/acercaDe.html">Acerca De</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="pages/contacto.html">Contacto</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link comencemos" href="pages/contacto.html">Comencemos</a>
-                    </li>
-                </ul>
+        <!-- empieza nav -->
+        <nav class="navbar navbar-expand-sm navbar-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand img" href="index.html"><img alt="imagen" src="multimedia/original.png" />
+                    <h4>WebMasters</h4>
+                </a>
+                <button id="buttonTitle" title="Navegador" class="navbar-toggler" type="button"
+                    data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="justify-content-end collapse navbar-collapse" id="collapsibleNavbar">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/preguntas.html">Preguntas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/acercaDe.html">Acerca De</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/contacto.html">Contacto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/contacto.html">Comencemos</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
-    <!-- termina nav -->
+        </nav>
+        <!-- termina nav -->
     </header>
     <main>
         <!-- empieza call 1 -->
-        <div class="call1" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0">
+        <div class="call1" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300"
+            data-aos-offset="0">
             <h2>Consigue un sitio web nuevo y reluciente en pocos días</h2>
             <a href="pages/contacto.html">Hagamoslo</a>
         </div>
@@ -66,23 +71,34 @@
             <section class="sec1" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <i alt="varita" class="fa-solid fa-wand-magic-sparkles" style="color: #2474ff"></i>
                 <h2>Diseño y creación sin costo alguno</h2>
-                <p>Sorprende a tus compañeros emprendedores. Presume que has contratado a un experto. A diferencia de otras plataformas de creación web, tú no tienes que preocuparte por el diseño en absoluto</p>
+                <p>
+                    Sorprende a tus compañeros emprendedores. Presume que has contratado
+                    a un experto. A diferencia de otras plataformas de creación web, tú
+                    no tienes que preocuparte por el diseño en absoluto
+                </p>
             </section>
             <section class="sec1" data-aos="fade-down" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <i alt="grafico" class="fa-solid fa-chart-line" style="color: #2474ff"></i>
                 <h2>Soporte gratuito</h2>
-                <p>¿Listo para ajustes? Solo envía un mensaje y nosotros nos encargaremos de todo</p>
+                <p>
+                    ¿Listo para ajustes? Solo envía un mensaje y nosotros nos
+                    encargaremos de todo
+                </p>
             </section>
             <section class="sec1" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <i alt="user" class="fa-solid fa-user icono3" style="color: #2474ff"></i>
                 <h2>Diseñado para captar clientes potenciales y generar negocio</h2>
-                <p>estratégicamente orientado a atraer la atención de personas que podrían estar interesadas en los productos o servicios ofrecidos</p>
+                <p>
+                    estratégicamente orientado a atraer la atención de personas que
+                    podrían estar interesadas en los productos o servicios ofrecidos
+                </p>
             </section>
         </div>
         <!-- termina primera seccion -->
 
         <!-- empieza call 2 -->
-        <div class="call1" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="500" data-aos-offset="0">
+        <div class="call1" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="500"
+            data-aos-offset="0">
             <h2>Estas a nada de obtener tu sitio web</h2>
             <a href="pages/contacto.html">¡Lo quiero ya!</a>
         </div>
@@ -90,19 +106,24 @@
 
         <!-- empieza segunda seccion -->
         <div class="tercera">
-            <section class="sec1 sec3 escudo" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+            <section class="sec1 sec3 escudo" data-aos="fade-right" data-aos-offset="300"
+                data-aos-easing="ease-in-sine">
                 <i alt="escudo" class="fa-solid fa-shield-halved" style="color: #2474ff"></i>
                 <h2>Todo incluido</h2>
                 <p>Diseño, desarrollo, hosting, dominio, gestión.</p>
             </section>
-            <section class="sec1 sec3 billete" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
+            <section class="sec1 sec3 billete" data-aos="fade-left" data-aos-offset="300"
+                data-aos-easing="ease-in-sine">
                 <h2>Precio accesible</h2>
                 <i class="fa-solid fa-money-bill" style="color: #2474ff"></i>
             </section>
             <section class="sec1 sec3 tag" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <i alt="tag" class="fa-solid fa-tag" style="color: #2474ff"></i>
                 <h2>Nunca pagarás tarifas de inscripción</h2>
-                <p>A todos nos desagrada encontrarnos con tarifas inesperadas o incrementos en los precios</p>
+                <p>
+                    A todos nos desagrada encontrarnos con tarifas inesperadas o
+                    incrementos en los precios
+                </p>
             </section>
             <section class="sec1 sec3 user" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <i alt="usuario" class="fa-solid fa-users-viewfinder" style="color: #2474ff"></i>
@@ -117,7 +138,8 @@
         </div>
         <!-- termina segunda seccion -->
         <!-- empieza call 3 -->
-        <div class="call1" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="500" data-aos-offset="0">
+        <div class="call1" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="500"
+            data-aos-offset="0">
             <h2>¿Que estas esperando?</h2>
             <a href="pages/contacto.html">Comencemos</a>
         </div>
@@ -153,4 +175,5 @@
     </script>
     <!--  -->
 </body>
+
 </html>
