--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="../pages/contacto.html">Contacto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link comencemos" href="../pages/contacto.html">Comencemos</a>
+                        <a class="nav-link" href="../pages/contacto.html">Comencemos</a>
                     </li>
                 </ul>
             </div>
