--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="primera">
             <section class="sec1" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <i alt="varita" class="fa-solid fa-wand-magic-sparkles" style="color: #2474ff"></i>
-                <h2>Diseño y creación sin costo alguno</h2>
+                <h2>Diseño y Creación sin costo alguno</h2>
                 <p>
                     Sorprende a tus compañeros emprendedores. Presume que has contratado
                     a un experto. A diferencia de otras plataformas de creación web, tú
@@ -79,7 +79,7 @@
             </section>
             <section class="sec1" data-aos="fade-down" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <i alt="grafico" class="fa-solid fa-chart-line" style="color: #2474ff"></i>
-                <h2>Soporte gratuito</h2>
+                <h2>Soporte Gratuito</h2>
                 <p>
                     ¿Listo para ajustes? Solo envía un mensaje y nosotros nos
                     encargaremos de todo
@@ -87,7 +87,7 @@
             </section>
             <section class="sec1" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <i alt="user" class="fa-solid fa-user icono3" style="color: #2474ff"></i>
-                <h2>Diseñado para captar clientes potenciales y generar negocio</h2>
+                <h2>Diseñado para captar clientes potenciales</h2>
                 <p>
                     estratégicamente orientado a atraer la atención de personas que
                     podrían estar interesadas en los productos o servicios ofrecidos
@@ -109,12 +109,12 @@
             <section class="sec1 sec3 escudo" data-aos="fade-right" data-aos-offset="300"
                 data-aos-easing="ease-in-sine">
                 <i alt="escudo" class="fa-solid fa-shield-halved" style="color: #2474ff"></i>
-                <h2>Todo incluido</h2>
+                <h2>Todo Incluido</h2>
                 <p>Diseño, desarrollo, hosting, dominio, gestión.</p>
             </section>
             <section class="sec1 sec3 billete" data-aos="fade-left" data-aos-offset="300"
                 data-aos-easing="ease-in-sine">
-                <h2>Precio accesible</h2>
+                <h2>Precio Accesible</h2>
                 <i class="fa-solid fa-money-bill" style="color: #2474ff"></i>
             </section>
             <section class="sec1 sec3 tag" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
@@ -127,7 +127,7 @@
             </section>
             <section class="sec1 sec3 user" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <i alt="usuario" class="fa-solid fa-users-viewfinder" style="color: #2474ff"></i>
-                <h2>Soporte personalizado</h2>
+                <h2>Soporte Personalizado</h2>
                 <p>Soporte las 24hs del dia</p>
             </section>
             <section class="sec1 sec3 cohete" data-aos="fade-up" data-aos-offset="300" data-aos-easing="ease-in-sine">
