--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -51,7 +51,7 @@
     <!-- termina nav -->
     </header>
     <main>
-        <h2 data-aos="fade-down-right">¡Bienvenido a WebMasters!</h2>
+        <h2 class="tituloAcerca" data-aos="fade-down-right">¡Bienvenido a WebMasters!</h2>
         <p class="textoaceraDe" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0"> Somos una empresa dedicada al desarrollo web, especializada en la creación de sitios web personalizados para todo tipo de negocios. </p>
         <p class="textoaceraDe" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="450" data-aos-offset="0"> En WebMasters, entendemos que tener una presencia en línea efectiva es fundamental para el éxito en el mundo moderno de los negocios. </p> 
         <p class="textoaceraDe" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="550" data-aos-offset="0">Nos comprometemos a proporcionar a nuestros clientes una experiencia sin problemas desde el inicio hasta la finalización del proyecto.</p>
