--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -53,7 +53,9 @@
     <!-- empieza seccion -->
     <main>
         <p class="textoservicios" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0">
-            En WebMasters, nos dedicamos a potenciar la presencia en línea de marcas y negocios mediante la creación de sitios web a medida. Nuestro enfoque se centra en capturar la esencia y el valor único de cada marca para ofrecer una experiencia digital que resuene con su audiencia.</p>
+            En WebMasters, nos dedicamos a potenciar la presencia en línea de marcas y negocios mediante la creación de sitios web a medida. </p>
+        <p class="textoservicios" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0">
+            Nuestro enfoque se centra en capturar la esencia y el valor único de cada marca para ofrecer una experiencia digital que resuene con su audiencia.</p>
 
         <div class="tercera tercera-serv" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
             <section class="sec1 sec3 varita-serv">
@@ -63,7 +65,7 @@
             </section>
             <section class="sec1 sec3 lapicera-serv" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <i alt="lapicera" class="fa-solid fa-pen-nib" style="color: #2474ff;"></i>
-                <h2>Diseño personalizado</h2>
+                <h2>Diseño Personalizado</h2>
                 <p>Tu marca es una prioridad para nosotros. El diseño de tu sitio web está cuidadosamente alineado con la imagen de tu marca</p>
             </section>
             <section class="sec1 sec3 tag-serv" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
@@ -73,7 +75,7 @@
             </section>
             <section class="sec1 sec3 comentario-serv" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
                 <i alt="comentario" class="fa-regular fa-comment-dots" style="color: #2474ff;"></i>
-                <h2>Dominio gratuito</h2>
+                <h2>Dominio Gratuito</h2>
                 <p>WebMasters registrará y pagará por su dominio. O puede traer su dominio existente y lo conectaremos a su sitio por usted. </p>
             </section>
             <section class="sec1 sec3 phone" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
